Bug 1284683 - add unanonymized nsIMediaDevice.rawId for browser-chrome use. r=jesup

MozReview-Commit-ID: A4RDfdZAF21

--HG--
extra : rebase_source : 0c1ca7b5a413daad31a95dd7eb42277a4e984f2f